Fixed aligning in History module

--- a/TYPO3.Neos/Resources/Private/Styles/Modules/Management/_History.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Modules/Management/_History.scss
@@ -2,8 +2,6 @@
 
 	$dateSize: $unit * 2;
 
-	text-align: center;
-
 	.neos-history-events-divider {
 		margin: 0;
 		padding: 0;
@@ -18,7 +16,6 @@
 	.neos-history-nextpage {
 		display: none;
 	}
-
 
 	.neos-history-day {
 
