--- a/TYPO3.Neos/Resources/Public/Styles/Includes-built.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Includes-built.css
@@ -9489,9 +9489,6 @@
 .neos.neos-module.neos-module-management-workspaces .neos-change-unchanged {
   color: #3f3f3f;
 }
-.neos.neos-module.neos-module-management-history {
-  text-align: center;
-}
 .neos.neos-module.neos-module-management-history .neos-history-events-divider {
   margin: 0;
   padding: 0;
